--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Prueba Técnica - NEORIS
+# Prueba Técnica
 
 Este repositorio contiene los resultados de la prueba técnica realizada para NEORIS. A continuación, se detallan los aspectos cubiertos durante la prueba y los resultados obtenidos.
 
