--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # Prueba Técnica
 
-Este repositorio contiene los resultados de la prueba técnica realizada para NEORIS. A continuación, se detallan los aspectos cubiertos durante la prueba y los resultados obtenidos.
+Este repositorio contiene los resultados de la prueba técnica realizada. A continuación, se detallan los aspectos cubiertos durante la prueba y los resultados obtenidos.
 
 ## Detalle de Archivo
 
